...
  '抽痛',
  '阵痛',
  '钝痛',
  '隐痛',
  '锐痛',
  '酸痛',
  '胀痛',
  '灼热痛',
  '麻痛',
  '针扎样',
  '电击样',
  '刀割样',
  '撕裂样',
...
